<resources>
    <string name="app_name">CaseStudy</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_favorites">Favorites</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="default_price">$0.00</string>
    <string name="default_product_name">Product Name</string>
    <string name="search_text">Search</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="you_have_no_favorite_items_yet">You have no favorite items yet.</string>
    <string name="product_image_content_description">Product image</string>
    <string name="error_label">Error</string>
    <string name="e_market">E-Market</string>
    <string name="favorites">Favorites</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="total">Total:</string>
    <string name="clear_all_items">Clear All Items</string>
    <string name="lorem_ipsum">Lorem ipsum.</string>
    <string name="product_name">Product Name</string>
    <string name="_0_00">$0.00</string>
    <string name="no_products_found">No products found</string>
    <string name="no_search_results_found">No result found</string>
    <string name="set_filter">Set Filter</string>
    <string name="no_filters_applied">No filters applied</string>
    <string name="filter_button_text">Filter</string>
    <string name="title_filter_products">Filter Products</string>
    <string name="filter_by_brand">Filter by Brand</string>
    <string name="filter_by_model">Filter by Model</string>
    <string name="apply_filters">Apply</string>
    <string name="clear_filters">Clear All</string>
</resources>