<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="170dp"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/item_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_shadow_end_color"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageButton
            android:id="@+id/item_add_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_star_outline_"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:layout_gravity="top|end" />
    </FrameLayout>

    <TextView
        android:id="@+id/product_price_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/default_price"
        android:textAppearance="?attr/textAppearanceListItemSecondary" />

    <TextView
        android:id="@+id/product_name_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/default_product_name"
        android:textAppearance="?attr/textAppearanceListItem" />

    <Button
        android:id="@+id/btn_addToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_to_cart"
        app:cornerRadius="4dp" />

</LinearLayout>
