<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.productDetail.ProductDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_fragment_product_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_fragment_product_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/product_detail_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/product_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/product_detail_favorite_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        app:layout_anchor="@id/product_detail_image"
        app:layout_anchorGravity="top|end"
        app:srcCompat="@drawable/icon_star_outline_" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="?attr/actionBarSize"
        android:paddingBottom="16dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/product_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                tools:text="@string/product_name" />

            <TextView
                android:id="@+id/product_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                tools:text="@string/lorem_ipsum" />

            <View
                android:id="@+id/content_spacer"
                android:layout_width="match_parent"
                android:layout_height="72dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/product_detail_price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/colorBackground"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/product_detail_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            tools:text="@string/_0_00" />

        <Button
            android:id="@+id/product_detail_add_to_cart_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/product_detail_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
